Thu Jul 29 14:25:14 2009  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/util.rb (CGI::unescape): support encoding option.

	* lib/cgi/cookie.rb (CGI::Cookie.parse): fix for the encoded value.

Wed Jul 29 08:08:07 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (regexp): regexp literal at the top of dstr is still needed
	  even if it is empty.

Wed Jul 29 03:36:24 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/json/lib/json/common.rb (JSON#recurse_proc): remove
	  unnecessary private specifier.  [ruby-dev:38929]

Wed Jul 29 03:34:46 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h, vm_insnhelper.c (vm_call_method): revive
	  VM_CALL_OPT_SEND_BIT and use it to recognize "send" method.

Wed Jul 29 03:11:59 2009  Koichi Sasada  <ko1@atdot.net>

	* proc.c (rb_method_entry_arity): support not_implemented method.
	  (I have no idea to test it)

Tue Jul 28 19:36:26 2009  Koichi Sasada  <ko1@atdot.net>

	* proc.c (rb_method_entry_arity): support optimized method (send).

	* test/ruby/test_method.rb: add a test for above.

Tue Jul 28 04:34:05 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/extconf.rb: bug fix and ignore invalid Tcl/Tk libraries.

	* ext/tk/lib/config_list.in: bug fix and add a new option.

	* ext/tk/lib/README.tcltklib: update for a new option.

Mon Jul 27 19:03:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_*str_new_cstr, rb_str_buf_new_cstr),
	  (rb_str_buf_cat2, rb_str_cat2, rb_exc_new2): suppress warnings.

Mon Jul 27 10:24:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parser.rb (RDoc::Parser.binary?): fix for empty files.
	  [ruby-dev:38848]

Mon Jul 27 06:51:41 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_eof): should call next_argv() before testing.
	  [ruby-core:24561]

Sun Jul 26 19:17:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_eof): go to the next file if called after ARGF.close