@@ -1,3 +1,7 @@
+Thu Jul 30 16:10:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* variable.c: use st_data_t for st functions.
+
 Thu Jul 29 14:25:14 2009  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>
 
 	* lib/cgi/util.rb (CGI::unescape): support encoding option.
